--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -50,7 +50,7 @@
         </ul>
     </header>
 
-    <body>
+    <main>
         <div id="seccionImagenes">
             <img id="imagenSelect" [ngStyle]="{'display':none}" (click)="MostrarPreview()" src="{{imgSelect}}" alt="imagen Seleccionada">
             <div id="contenedorIMG">
@@ -103,5 +103,10 @@
                 </div>
             </div>
         </div>
-    </body>
+    </main>
+    <footer class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a
+            href="https://github.com/Jank1510">Jehan Carlos Hurtado</a>.
+    </footer>
 </div>
